# exercises

./: .gitignore  README.md  class_2026-01-13_Intro_python.py  class_2026-01-15_More-python.py  class_2026-01-20_Data-structures.py  class_2026-01-29_numpy.py  class_2026-01-30_Broadcasting.py  class_2026-02-05_pandas.py  class_2026-02-10_more_pandas_polars.py  class_2026-02-17_sklearn.py  class_2026-02-19_sklearn2.py  class_2026-02-19_sklearn3.py  class_2026-02-24_sklearn3.py  class_2026-03-19_pymc.py  class_2026-03-31_optimization.py  class_2026-04-02_mle.py  pyproject.toml
class_2026-01-22_uv/: exercises.py
class_2026-01-22_uv/analytics/models/: __init__.py  regression.py
class_2026-01-22_uv/calculate_ci/: pyproject.toml
class_2026-03-03_docker_vetiver/vetiver/: api_test.py
class_2026-03-05_fastapi/ex2/: test.py
