[project]
name = "exercises"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "jax>=0.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pins>=0.9.1",
    "plotnine>=0.15.3",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "pymc>=5.28.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "vetiver>=0.2.6",
]

[tool.pyrefly]
project_includes = ["**/*.py"]
